worked on slides

--- a/Slides/Intro_slides.html
+++ b/Slides/Intro_slides.html
@@ -110,26 +110,13 @@
 
 </article></slide><slide class=''><hgroup><h2></h2></hgroup><article  id="section-1">
 
-<aside class='note'><section><p>The issue of structure and agency is central for sociology. Sociologists recognize two main determinants of social phenomena, social structure and individual actions (human agency); what is contested is their relative importance. Social structure refers to those larger and relatively enduring features of society which provide the background against which social life is carried out: for example, the class structure. It highlights the fact that human societies have certain regularities in the social relationships which people engage in. Agency, on the other hand, refers to the volitional and purposeful nature of human activity. Social structure is believed to exert a constraining effect on human activity; agency refers to the ability of individuals to act independently of this.</p>
-
-<p>It is possible to identify three main standpoints in the debate. (1) Some branches of sociology (such as structuralism, functionalism and Marxism) assert that social life is largely determined by social structure, and that individual activities can be explained mostly as an outcome of structure. (2) Other branches (for instance, phenomenological sociology, ethnomethodology and symbolic interactionism) reverse this emphasis, stressing the ability of individuals to construct and reconstruct and give meaning to their world. Proponents of this view emphasize the need to provide explanations for social phenomena which reflect the views of the individuals they study. (3) Other approaches stress the complementarity of structure and agency. Social structure influences human actions, but individual activities can similarly influence social structure.</p></section></aside>
-
-</article></slide><slide class=''><hgroup><h2></h2></hgroup><article  id="section-2">
-
-<ul>
-<li>Think about your study. Or, if you do not have one, come up with an interesting question you would like to work on. With your neighbour, elaborate the questions in the checklist at the end of the bookdown chapter 1 provided.</li>
-<li>What are possible consequences of your particular research setting, as identified through the checklist? Be prepared to share the results with the group.</li>
-</ul>
-
-</article></slide><slide class=''><hgroup><h2></h2></hgroup><article  id="section-3">
-
 <p><em>Day 1</em></p>
 
 <p>13.00-14.30 <em>Research Design I: Introduction to core concepts</em></p>
 
 <p>Relational data and the importance of tie content Network phenomena on global and individual levels Networks as dependent and independent variables Setting boundaries</p>
 
-<p>15.00-16.30 <em>Research Design II: Relational data </em></p>
+<p>15.00-16.30 <em>Research Design II: Relational data in R</em></p>
 
 <p>Edgelists, adjacency matrices, adjacency lists Bipartite and unipartite networks The joys and dangers of visualizing social networks</p>
 
@@ -137,7 +124,7 @@
 
 <p>Case Demonstration of the research done in the field from Dr. Filipe Clemente</p>
 
-</article></slide><slide class=''><hgroup><h2></h2></hgroup><article  id="section-4">
+</article></slide><slide class=''><hgroup><h2></h2></hgroup><article  id="section-2">
 
 <p><em>Day 2</em></p>
 
@@ -155,7 +142,25 @@
 
 <p>17.00-18.20 <em>Analysis III: Inference </em></p>
 
-<p>Introduction of models that can be used for statistical inference with relational data</p></article></slide>
+<p>Introduction of models that can be used for statistical inference with relational data</p>
+
+</article></slide><slide class=''><hgroup><h2></h2></hgroup><article  id="section-3">
+
+<p>Anything else you would love to discuss in this workshop? Pretty sure we can.</p>
+
+</article></slide><slide class='segue dark nobackground level1'><hgroup class = 'auto-fadein'><h2>Introduction to core concepts</h2></hgroup><article  id="introduction-to-core-concepts">
+
+<aside class='note'><section><p><em>Structure vs. Agency</em> <em>Tie content</em> <em>Global vs individual level phenomena</em> <em>NWs as dependent/ independent</em> _ Boundary setting_</p>
+
+<p>The issue of structure and agency is central for sociology. Sociologists recognize two main determinants of social phenomena, social structure and individual actions (human agency); what is contested is their relative importance. Social structure refers to those larger and relatively enduring features of society which provide the background against which social life is carried out: for example, the class structure. Agency, on the other hand, refers to the volitional and purposeful nature of human activity. Social structure is believed to exert a constraining effect on human activity; agency refers to the ability of individuals to act independently of this. Non-extreme approaches stress the complementarity of structure and agency. Social structure influences human actions, but individual activities can similarly influence social structure.</p></section></aside>
+
+</article></slide><slide class=''><hgroup><h2><span style="color:blue">
+Your turn</span></h2></hgroup><article  id="your-turn">
+
+<ul>
+<li>Think about your study. Or, if you do not have one, come up with an interesting question you would like to work on. With your neighbour, elaborate the questions in the checklist at the end of the bookdown chapter 1 provided.</li>
+<li>What are possible consequences of your particular research setting, as identified through the checklist? Be prepared to share the results with the group.</li>
+</ul></article></slide>
 
 
   <slide class="backdrop"></slide>
