offline africa bush package installation

--- a/Slides/0_Intro_slides.html
+++ b/Slides/0_Intro_slides.html
@@ -136,13 +136,11 @@
 
 <p>Introduction to basic individual and structural level measures</p>
 
-<p>13.00-14.30 <em>Analysis II: R, R, R </em></p>
-
-<p>Manipulating network data in R (and how to create pretty pictures)</p>
-
-<p>17.00-18.20 <em>Analysis III: Inference </em></p>
+<p>13.00-16.30 <em>Analysis II: Inference </em></p>
 
 <p>Introduction of models that can be used for statistical inference with relational data</p>
+
+<p>17.00-18.20 <em>Analysis III: Group work </em></p>
 
 </article></slide><slide class=''><hgroup><h2></h2></hgroup><article  id="section-3">
 
